<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#ececec" >

    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/all"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:clickable="true"
            android:background="@drawable/subscribe_title_btn_bg_selector"
            android:gravity="center"
            android:text="@string/subscribe_top_btn_all"
            android:textSize="18sp" />

        <Button
            android:id="@+id/alert"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:clickable="true"
            android:background="@drawable/subscribe_title_btn_bg_selector"
            android:gravity="center"
            android:text="@string/subscribe_top_btn_alert"
            android:textSize="18sp" />

        <Button
            android:id="@+id/normal"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:clickable="true"
            android:background="@drawable/subscribe_title_btn_bg_selector"
            android:gravity="center"
            android:text="@string/subscribe_top_btn_normal"
            android:textSize="18sp" />

        <Button
            android:id="@+id/history"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:clickable="true"
            android:background="@drawable/subscribe_title_btn_bg_selector"
            android:gravity="center"
            android:text="@string/subscribe_top_btn_history"
            android:textSize="18sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/topBar"
        android:layout_marginBottom="70dp"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/bottom_search_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/search_btn" />

</RelativeLayout>