<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dcdcdc"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:id="@+id/input_panel"
        android:layout_width="fill_parent"
        android:layout_height="139dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/register_panel_bg"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="12dp"
            android:layout_weight="1.0" >

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:text="@string/email"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/mobile_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="20dp"
                android:background="#00ffffff"
                android:textSize="16sp" />

<!--             <Button
                android:id="@+id/verify_button"
                android:layout_width="60dp"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginRight="4dp"
                android:background="#4daf7c"
                android:shadowDx="1.0"
                android:shadowDy="1.0"
                android:text="@string/verify"
                android:textColor="@color/text_white"
                android:textSize="16sp" /> -->
        </RelativeLayout>

        <!-- <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_weight="1.0" >

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="24dp"
                android:text="@string/verify_key"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/verify_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="10dp"
                android:background="#00ffffff"
                android:inputType="number"
                android:textSize="16sp" />
        </RelativeLayout> -->

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_weight="1.0" >

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:text="@string/input_password"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="10dp"
                android:background="#00ffffff"
                android:inputType="textPassword"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_weight="1.0" >

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:text="@string/confirm_password"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="10dp"
                android:background="#00ffffff"
                android:inputType="textPassword"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_panel"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="#009bde"
            android:shadowDx="1.0"
            android:shadowDy="1.0"
            android:text="@string/login"
            android:textColor="@color/text_white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/register"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="#4daf7c"
            android:shadowDx="1.0"
            android:shadowDy="1.0"
            android:text="@string/register"
            android:textColor="@color/text_white"
            android:textSize="16sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/progress"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="true"
        android:visibility="gone" >
	    <ProgressBar
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="180dp"/>
    </RelativeLayout>

</RelativeLayout>