<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dcdcdc"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="140dp"
            android:background="#dcdcdc" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/head" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/input_bg1" >

            <TextView
                android:id="@+id/user"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="10dp"
                android:text="@string/user_id"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@id/user"
                android:background="#00ffffff"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/input_bg1" >

            <TextView
                android:id="@+id/pw"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="10dp"
                android:text="@string/password"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@id/pw"
                android:background="#00ffffff"
                android:inputType="textPassword" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/login"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_weight="1"
                android:background="#009bde"
                android:shadowDx="1.0"
                android:shadowDy="1.0"
                android:text="@string/login"
                android:textColor="@color/text_white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/register"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#4daf7c"
                android:shadowDx="1.0"
                android:shadowDy="1.0"
                android:text="@string/register"
                android:textColor="@color/text_white"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#bfbfbf" >

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="#e6e6e6"
            android:layout_margin="0.5dp">
        <Button
            android:id="@+id/weibo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/weibo" />
		</FrameLayout>
        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="#e6e6e6"
            android:layout_margin="0.5dp">
        <Button
            android:id="@+id/qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/qq" />
		</FrameLayout>

    </LinearLayout>
</RelativeLayout>